Fix: text nowrap and wider columns

--- a/frontend/src/components/BookingTable.css
+++ b/frontend/src/components/BookingTable.css
@@ -1,6 +1,6 @@
 :root {
   --row-height: 4px;
-  --column-width: 90px;
+  --column-width: 95px;
   --header-bg-color: #ebebeb;
   --number-of-cols: 10;
 
@@ -36,6 +36,7 @@
   justify-content: center;
   align-items: center;
   z-index: 2;
+  text-wrap: nowrap;
 }
 
 .subheader-sticky {
